namespace java org.exercise.order

struct OrderReq {

 1: required string productName;

 2: required i32 count;

}