namespace java org.exercise.pricing
struct PricingReq{
 1: required string productName;

 2: required i32 count;

}