namespace java org.exercise.stock

struct StockReq {

 1: required string productName;

 2: required i32 count;

}